.asmdefファイルを修正して、VRCにアップロードできない問題を解決しました

--- a/Packages/com.slumber-halo.blendshape-overwriter/Runtime/com.slumber-halo.blendshape-overwriter.asmdef
+++ b/Packages/com.slumber-halo.blendshape-overwriter/Runtime/com.slumber-halo.blendshape-overwriter.asmdef
@@ -1,15 +1,18 @@
 {
-  "name": "com.slumber-halo.blendshape-overwriter",
-  "references": [
-    "VRC.SDK3A",
-    "VRC.SDKBase"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "autoReferenced": true,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "defineConstraints": [],
-  "optionalUnityReferences": []
+    "name": "com.slumber-halo.blendshape-overwriter",
+    "rootNamespace": "",
+    "references": [
+        "VRC.SDK3A",
+        "VRC.SDKBase",
+        "nadena.dev.ndmf.runtime"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": true,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
