--- a/Packages/com.slumber-halo.blendshape-overwriter/Editor/com.slumber-halo.blendshape-overwriter.Editor.asmdef
+++ b/Packages/com.slumber-halo.blendshape-overwriter/Editor/com.slumber-halo.blendshape-overwriter.Editor.asmdef
@@ -2,16 +2,14 @@
     "name": "com.slumber-halo.blendshape-overwriter.Editor",
     "rootNamespace": "",
     "references": [
-        "VRC.SDK3A",
-        "VRC.SDK3A.Editor",
-        "VRC.SDKBase",
-        "VRC.SDKBase.Editor",
         "com.slumber-halo.blendshape-overwriter",
         "nadena.dev.ndmf"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
